
syntax = "proto3";

package kfe.config;

import "kfe/config/grpc/backends/backend.proto";
import "kfe/config/http/backends/backend.proto";


/// Config is the top level configuration message for a backend pool.
message BackendPoolConfig {
    message Grpc {
        repeated kfe.config.grpc.backends.Backend backends = 1;
    }
    message Http {
        repeated kfe.config.http.backends.Backend backends = 1;
    }

    repeated TlsServerConfig tls_server_configs = 1;
    Grpc grpc = 2;
    Grpc http = 3;

}

message TlsServerConfig {
    string name = 1;
    // TODO(mwitkow): add tls-config declarations.
}

